# research-code-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py
src/tests/: __init__.py  test_docstrings.py
